# CFlags

./: CMakeLists.txt  LICENSE  Readme.md
src/: cbitset.c  cbitset.h  cflags.c  cflags.h
test/: main.c  testbitset.cpp
